Frontend do relatório

--- a/app/template/menu.html
+++ b/app/template/menu.html
@@ -19,18 +19,21 @@
                     <i class="icon-user"></i><span>Empresa</span>
                 </a>
             </li>
+            <li id="colaborador-li">
+                <a ui-sref="colaborador">
+                    <i class="icon-user"></i><span>Colaborador</span>
+                </a>
+            </li>
+            <li id="relatorio-li">
+                <a ui-sref="relatorio">
+                    <i class="icon-user"></i><span>Relatório</span>
+                </a>
+            </li>
             <li id="contador-li">
                 <a ui-sref="contador">
                     <i class="icon-user"></i><span>Contador</span>
                 </a>
             </li>
-            <li id="colaborador-li">
-
-                <a ui-sref="colaborador">
-                    <i class="icon-user"></i><span>Colaborador</span>
-                </a>
-            </li>
-
         </ul>
     </div>
 </div>
